fix bugs history